--- a/src/main/resources/simplelogger.properties
+++ b/src/main/resources/simplelogger.properties
@@ -4,12 +4,12 @@
 # Default logging detail level for all instances of SimpleLogger.
 # Must be one of ("trace", "debug", "info", "warn", or "error").
 # If not specified, defaults to "info".
-org.slf4j.simpleLogger.defaultLogLevel=error
+org.slf4j.simpleLogger.defaultLogLevel=info
 
 # Logging detail level for a SimpleLogger instance named "xxxxx".
 # Must be one of ("trace", "debug", "info", "warn", or "error").
 # If not specified, the default logging detail level is used.
-org.slf4j.simpleLogger.log.org.eclipse.jetty=info
+org.slf4j.simpleLogger.log.io.prometheus.client=info
 org.slf4j.simpleLogger.log.org.apache.kafka=error
 
 # Set to true if you want the current date and time to be included in output messages.
